@@ -1,4 +1,4 @@
-This is ACE version 4.2.30, released Tue Aug 05 22:21:21 1997.
+This is ACE version 4.2.29, released Tue Aug 05 22:21:21 1997.
 
 If you have any problems with ACE, please send email to Douglas
 C. Schmidt (schmidt@cs.wustl.edu).
